--- a/Basic First Lines.html
+++ b/Basic First Lines.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Hello World</title>
+		<title>PeaceFinder</title>
 		<link rel="stylesheet" href="main.css">
 	</head>
 	<body>
