added photos to carousel

--- a/Basic First Lines.html
+++ b/Basic First Lines.html
@@ -47,15 +47,15 @@
     </div>
 
     <div class="item">
-      <img src="img_chania2.jpg" alt="Chania">
+      <img src="st-pauls-cathedral1.jpg" alt="St Paul's Cathedral">
     </div>
 
     <div class="item">
-      <img src="img_flower.jpg" alt="Flower">
+      <img src="wellcome-reading-room.jpg" alt="Wellcome Collection's Reading Room">
     </div>
 
     <div class="item">
-      <img src="img_flower2.jpg" alt="Flower">
+      <img src="st-georges-gardens.jpg" alt="St George's Gardens">
     </div>
   </div>
 
