renamed the contact page and linked it in the website

--- a/Basic First Lines.html
+++ b/Basic First Lines.html
@@ -24,7 +24,7 @@
 		      <li class="active"><a href="#">home</a></li>
 		      <li><a href="#">about us</a></li>
 		      <li><a href="#">map</a></li>
-		      <li><a href="Contact page.html">contact</a></li>
+		      <li><a href="contact.html">contact</a></li>
 		    </ul>
 		  </div>
 		</nav>
