--- a/Basic First Lines.html
+++ b/Basic First Lines.html
@@ -2,9 +2,11 @@
 <html>
 	<head>
 		<title>PeaceFinder</title>
-		<link rel="stylesheet" href="main.css">
-		<title>PeaceFinder - homepage</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js">
+		</script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
+		</script>
 	</head>
 	<body>
 
@@ -31,7 +33,7 @@
 
 		<!-- Carousel -->
 
-		<div id="myCarousel" class="carousel slide" data-ride="carousel">
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
   <ol class="carousel-indicators">
     <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -44,18 +46,30 @@
   <div class="carousel-inner" role="listbox">
     <div class="item active">
       <img src="SOAS-japanese-roof-garden.jpg" alt="SOAS's roof garden">
+			<div class="carousel-caption">
+				<h3> SOAS's Japanese roof garden </h3>
+			</div>
     </div>
 
     <div class="item">
       <img src="st-pauls-cathedral1.jpg" alt="St Paul's Cathedral">
+			<div class="carousel-caption">
+				<h3> St Paul's Cathedral </h3>
+			</div>
     </div>
 
     <div class="item">
       <img src="wellcome-reading-room.jpg" alt="Wellcome Collection's Reading Room">
+			<div class="carousel-caption">
+				<h3> Wellcome Collection's Reading Room </h3>
+			</div>
     </div>
 
     <div class="item">
       <img src="st-georges-gardens.jpg" alt="St George's Gardens">
+			<div class="carousel-caption">
+				<h3> St George's Gardens, Bloomsbury </h3>
+			</div>
     </div>
   </div>
 
@@ -77,7 +91,7 @@
 	included places mostly in and around University College London's main buildlings but
 	if you find a cozy corner or peaceful cafe you think the world needs to know about,
 	send us an email under the <b>contact</b> tab and we'll get back to you! <br> Thanks for
-	visiting PeaceFinder and we hope you find a new favourite chill out spot.
+	visiting PeaceFinder and we hope you find a new favourite chill out spot. </p>
 
 	</body>
 </html>
