--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		      <li class="active"><a href="#">home</a></li>
 		      <li><a href="#">about us</a></li>
 		      <li><a href="#">map</a></li>
-		      <li><a href="#">contact</a></li>
+		      <li><a href="contact.html">contact</a></li>
 		    </ul>
 		  </div>
 		</nav>
