--- a/Basic First Lines.html
+++ b/Basic First Lines.html
@@ -25,7 +25,7 @@
 		    <ul class="nav navbar-nav">
 		      <li class="active"><a href="#">home</a></li>
 		      <li><a href="#">about us</a></li>
-		      <li><a href="#">map</a></li>
+		      <li><a href="map.html">map</a></li>
 		      <li><a href="contact.html">contact</a></li>
 		    </ul>
 		  </div>
