--- a/contact.html
+++ b/contact.html
@@ -37,12 +37,12 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       		</button>
-		      <a class="navbar-brand" href="#">PeaceFinder: London</a>
+		      <a class="navbar-brand" href="Basic First Lines.html">PeaceFinder: London</a>
 		    </div>
 		    <ul class="nav navbar-nav">
 		      <li class="active"><a href="#">home</a></li>
 		      <li><a href="#">about us</a></li>
-		      <li><a href="#">map</a></li>
+		      <li><a href="map.html">map</a></li>
 		      <li><a href="contact.html">contact</a></li>
 		    </ul>
 		  </div>
