trying to correct font and size

--- a/contact.html
+++ b/contact.html
@@ -9,26 +9,7 @@
 	<body>
 
 <!-- Navbar -->
- <style>
-    body {
-      text-align: center;
-   
-      color: black;
-      font-family: helvetica;
-    }
-    p {
-      font-size: 22px;
-    }
-    input {
-      border: 0;
-      padding: 10px;
-      font-size: 18px;
-    }
-    input[type="submit"] {
-      background: red;
-      color: white;
-    }
-  </style>
+ 
 		<nav class="navbar navbar-inverse">
 		  <div class="container-fluid">
 		    <div class="navbar-header">
@@ -40,7 +21,7 @@
 		      <a class="navbar-brand" href="Basic First Lines.html">PeaceFinder: London</a>
 		    </div>
 		    <ul class="nav navbar-nav">
-		      <li class="active"><a href="#">home</a></li>
+		      <li class="active"><a href="Basic First Lines.html">home</a></li>
 		      <li><a href="#">about us</a></li>
 		      <li><a href="map.html">map</a></li>
 		      <li><a href="contact.html">contact</a></li>
