--- a/Basic First Lines.html
+++ b/Basic First Lines.html
@@ -24,7 +24,7 @@
 		    </div>
 		    <ul class="nav navbar-nav">
 		      <li class="active"><a href="#">home</a></li>
-		      <li><a href="#">about us</a></li>
+		      <li><a href="about us.html">about us</a></li>
 		      <li><a href="map.html">map</a></li>
 		      <li><a href="contact.html">contact</a></li>
 		    </ul>
