--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
 		    </div>
 		    <ul class="nav navbar-nav">
 		      <li class="active"><a href="Basic First Lines.html">home</a></li>
-		      <li><a href="#">about us</a></li>
+		      <li><a href="about us.html">about us</a></li>
 		      <li><a href="map.html">map</a></li>
 		      <li><a href="contact.html">contact</a></li>
 		    </ul>
