--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 		      <a class="navbar-brand" href="#">PeaceFinder: London</a>
 		    </div>
 		    <ul class="nav navbar-nav">
-		      <li class="active"><a href="#">home</a></li>
-		      <li><a href="#">about us</a></li>
-		      <li><a href="#">map</a></li>
+		      <li<a href="#">home</a></li>
+		      <li> class="active"><a href="about us.html">about us</a></li>
+		      <li><a href="map.html">map</a></li>
 		      <li><a href="contact.html">contact</a></li>
 		    </ul>
 		  </div>
