--- a/about us.html
+++ b/about us.html
@@ -22,41 +22,14 @@
 		    </div>
 		    <ul class="nav navbar-nav">
 		      <li><a href="Basic First Lines.html">home</a></li>
-		      <li><a href="about us.html">about us</a></li>
+		      <li class="active"><a href="about us.html">about us</a></li>
 		      <li><a href="map.html">map</a></li>
-		      <li class="active"><a href="contact.html">contact</a></li>
+		      <li><a href="contact.html">contact</a></li>
 		    </ul>
 		  </div>
 		</nav>
 
-<head>
+	</body>
 <link rel="stylesheet" type="text/css" href="contactstyle.css"></head>
-<h1>Contact us!<h1> 
-</h1> 
-</head>
 
-<form>
-
-  <div class="form-group">
-    <label for="fname">First name:</label>
-    <input type="name" placeholder="First name">
-  </div>
-  <div class="form-group">
-    <label for="lname">Surname:</label> 
-     <input type="name" placeholder="Surname">
-  </div> 
-  <div class="form-group">
-    <label for="email">Email address:</label>
-    <input type="email" placeholder="Your email">
-  </div>
-  <div class="form-group">
-  	<label for="textarea">Comments:</label>
-  	
-  <textarea> </textarea>>
-   
-</form>
-
-<div style="text-align:center;">
-    <button>Submit</button>
-   
-</div>
+</html>
