--- a/peacefinder-master/Basic First Lines.html
+++ b/peacefinder-master/Basic First Lines.html
@@ -48,28 +48,28 @@
     <div class="item active">
       <img src="SOAS-japanese-roof-garden.jpg" alt="SOAS's roof garden">
 			<div class="carousel-caption">
-				<h3> SOAS's Japanese roof garden </h3>
+				<h5> SOAS's Japanese roof garden </h5>
 			</div>
     </div>
 
     <div class="item">
-      <img src="st-pauls-cathedral1.jpg" alt="St Paul's Cathedral">
+      <img src="st-pauls1.jpg" alt="St Paul's Cathedral">
 			<div class="carousel-caption">
-				<h3> St Paul's Cathedral </h3>
+				<h5> St Paul's Cathedral </h5>
 			</div>
     </div>
 
     <div class="item">
       <img src="wellcome-reading-room.jpg" alt="Wellcome Collection's Reading Room">
 			<div class="carousel-caption">
-				<h3> Wellcome Collection Reading Room </h3>
+				<h5> Wellcome Collection Reading Room </h5>
 			</div>
     </div>
 
     <div class="item">
       <img src="st-georges-gardens.jpg" alt="St George's Gardens">
 			<div class="carousel-caption">
-				<h3> St George's Gardens, Bloomsbury </h3>
+				<h5> St George's Gardens, Bloomsbury </h5>
 			</div>
     </div>
   </div>
