--- a/peacefinder-master/contact.html
+++ b/peacefinder-master/contact.html
@@ -3,7 +3,6 @@
 	<head>
 		<title>PeaceFinder</title>
 		<link rel="stylesheet" href="main.css">
-		<title>PeaceFinder - homepage</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	</head>
 	<body>
@@ -12,7 +11,7 @@
  <style>
     body {
       text-align: center;
-   
+
       color: black;
       font-family: helvetica;
     }
@@ -50,8 +49,8 @@
 
 <head>
 <link rel="stylesheet" type="text/css" href="contactstyle.css"></head>
-<h1>Contact us!<h1> 
-</h1> 
+<h1>Contact us!<h1>
+</h1>
 </head>
 
 <form>
@@ -61,21 +60,21 @@
     <input type="name" placeholder="First name">
   </div>
   <div class="form-group">
-    <label for="lname">Surname:</label> 
+    <label for="lname">Surname:</label>
      <input type="name" placeholder="Surname">
-  </div> 
+  </div>
   <div class="form-group">
     <label for="email">Email address:</label>
     <input type="email" placeholder="Your email">
   </div>
   <div class="form-group">
   	<label for="textarea">Comments:</label>
-  	
-  <textarea> </textarea>>
-   
+
+  <textarea> </textarea>
+
 </form>
 
 <div style="text-align:center;">
     <button>Submit</button>
-   
+
 </div>
